--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
       </div>
       <div class="footer-list">
         <ul>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#galery">Gallery</a></li>
+          <li><a href="#company">About Our Company</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="#service">Services</a></li>
         </ul>
       </div>
     </footer>
